--- a/cdss_1/requirements.txt
+++ b/cdss_1/requirements.txt
@@ -1,7 +1,7 @@
 # This file may be used to create an environment using:
 # $ conda create --name <env> --file <this file>
 # platform: linux-64
-_libgcc_mutex=0.1=main
+_libgcc_mutex==0.1=main
 _openmp_mutex=5.1=1_gnu
 asgiref=3.7.2=pypi_0
 bzip2=1.0.8=h7b6447c_0
