--- a/cdss_1/Dockerfile
+++ b/cdss_1/Dockerfile
@@ -20,3 +20,8 @@ ENTRYPOINT ["conda", "run", "--no-capture-output", "-n", "cdss", "python", "runs
 # Created docker image called cdss-django-app: 'docbuild -t cdss-django-app .'
 # Run with 'docker run -p 8000:8000 cdss-django-app'
 # View at 'http://172.17.0.2:8000'
+
+# Pushed to private repo with:
+# docker login
+# docker tag cdss-django-app willbolton/wb_private_repo:cdss-django-app
+# docker push willbolton/wb_private_repo:cdss-django-app
